# bayesian-penalty-analysis

./: README.md  pyproject.toml
core/: bayesian_penalty_analysis.ipynb
core/stan_models/: logistic_penalty  logistic_penalty.stan  position_model  position_model.stan
core/utils/: __init__.py  utils.py
core/web-scraping/: scrape_ucl_penalties.py
data/: UCL-Shootout.csv
docs/: ULC-Shootout.md
