[project]
name = "bayesian-penalty-analysis"
version = "0.1.0"
description = "Bayesian analysis of penalty shootouts using Stan and web scraping"
requires-python = ">=3.13"
dependencies = [
    "cmdstanpy>=1.2.0",
    "arviz>=0.16.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "selenium>=4.10.0",
    "beautifulsoup4>=4.12.0",
]